functionality to dump object data types
1. variables named changes
2. CSS changes where made
3. Updated demo HTML page

--- a/demo.htm
+++ b/demo.htm
@@ -8,7 +8,7 @@
 								}table, td, th {
 								    border: 1px solid black;
 								    text-align: center;
-								}.boolean-th{ background-color: #75507B; color: white; };</style><table>
+								}.boolean-th{ background-color: #BF00FF; color: white; };</style><table>
 				<thead>
 					<tr>
 						<th class='boolean-th'>
@@ -118,8 +118,8 @@
 								}td {
 								    text-align: left;
 								    padding:5px 5px 5px 5px;
-								}.array-multi-th{ background-color: #0000FF; color: white; }.array-single-th{ background-color: #4E9A06; color: white; };</style><h3>tidy_dump of &#36;_SERVER :</h3><table><thead><tr><th colspan='2' class='array-single-th'>ARRAY(34)</th></tr></thead><tbody><tr><th>Key</th><th>Value</th></tr><tr><td>HTTP_HOST</td><td>localhost</td></tr><tr><td>HTTP_USER_AGENT</td><td>Mozilla/5.0 (Windows NT 6.1; rv:47.0) Gecko/20100101 Firefox/47.0</td></tr><tr><td>HTTP_ACCEPT</td><td>text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8</td></tr><tr><td>HTTP_ACCEPT_LANGUAGE</td><td>en-US,en;q=0.5</td></tr><tr><td>HTTP_ACCEPT_ENCODING</td><td>gzip, deflate</td></tr><tr><td>HTTP_CONNECTION</td><td>keep-alive</td></tr><tr><td>HTTP_CACHE_CONTROL</td><td>max-age=0</td></tr><tr><td>PATH</td><td>C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;</td></tr><tr><td>SystemRoot</td><td>C:\Windows</td></tr><tr><td>COMSPEC</td><td>C:\Windows\system32\cmd.exe</td></tr><tr><td>PATHEXT</td><td>.COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC</td></tr><tr><td>WINDIR</td><td>C:\Windows</td></tr><tr><td>SERVER_SIGNATURE</td><td><address>Apache/2.4.9 (Win32) PHP/5.5.12 Server at localhost Port 80</address>
-</td></tr><tr><td>SERVER_SOFTWARE</td><td>Apache/2.4.9 (Win32) PHP/5.5.12</td></tr><tr><td>SERVER_NAME</td><td>localhost</td></tr><tr><td>SERVER_ADDR</td><td>127.0.0.1</td></tr><tr><td>SERVER_PORT</td><td>80</td></tr><tr><td>REMOTE_ADDR</td><td>127.0.0.1</td></tr><tr><td>DOCUMENT_ROOT</td><td>C:/wamp/www/</td></tr><tr><td>REQUEST_SCHEME</td><td>http</td></tr><tr><td>CONTEXT_PREFIX</td><td></td></tr><tr><td>CONTEXT_DOCUMENT_ROOT</td><td>C:/wamp/www/</td></tr><tr><td>SERVER_ADMIN</td><td>admin@example.com</td></tr><tr><td>SCRIPT_FILENAME</td><td>C:/wamp/www/tidy_dump/test.php</td></tr><tr><td>REMOTE_PORT</td><td>49665</td></tr><tr><td>GATEWAY_INTERFACE</td><td>CGI/1.1</td></tr><tr><td>SERVER_PROTOCOL</td><td>HTTP/1.1</td></tr><tr><td>REQUEST_METHOD</td><td>GET</td></tr><tr><td>QUERY_STRING</td><td></td></tr><tr><td>REQUEST_URI</td><td>/tidy_dump/test.php</td></tr><tr><td>SCRIPT_NAME</td><td>/tidy_dump/test.php</td></tr><tr><td>PHP_SELF</td><td>/tidy_dump/test.php</td></tr><tr><td>REQUEST_TIME_FLOAT</td><td>1468442558.539</td></tr><tr><td>REQUEST_TIME</td><td>1468442558</td></tr></tbody></table><style>
+								}.array-multi-th{ background-color: #0000FF; color: white; }.array-single-th{ background-color: #4E9A06; color: white; }.array-object-th{ background-color: #BFBFBF; color: white; };</style><h3>tidy_dump of &#36;_SERVER :</h3><table><thead><tr><th colspan='2' class='array-single-th'>ARRAY(34)</th></tr></thead><tbody><tr><th>Key</th><th>Value</th></tr><tr><td>HTTP_HOST</td><td>localhost</td></tr><tr><td>HTTP_USER_AGENT</td><td>Mozilla/5.0 (Windows NT 6.1; rv:47.0) Gecko/20100101 Firefox/47.0</td></tr><tr><td>HTTP_ACCEPT</td><td>text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8</td></tr><tr><td>HTTP_ACCEPT_LANGUAGE</td><td>en-US,en;q=0.5</td></tr><tr><td>HTTP_ACCEPT_ENCODING</td><td>gzip, deflate</td></tr><tr><td>HTTP_CONNECTION</td><td>keep-alive</td></tr><tr><td>HTTP_CACHE_CONTROL</td><td>max-age=0</td></tr><tr><td>PATH</td><td>C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;</td></tr><tr><td>SystemRoot</td><td>C:\Windows</td></tr><tr><td>COMSPEC</td><td>C:\Windows\system32\cmd.exe</td></tr><tr><td>PATHEXT</td><td>.COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC</td></tr><tr><td>WINDIR</td><td>C:\Windows</td></tr><tr><td>SERVER_SIGNATURE</td><td><address>Apache/2.4.9 (Win32) PHP/5.5.12 Server at localhost Port 80</address>
+</td></tr><tr><td>SERVER_SOFTWARE</td><td>Apache/2.4.9 (Win32) PHP/5.5.12</td></tr><tr><td>SERVER_NAME</td><td>localhost</td></tr><tr><td>SERVER_ADDR</td><td>127.0.0.1</td></tr><tr><td>SERVER_PORT</td><td>80</td></tr><tr><td>REMOTE_ADDR</td><td>127.0.0.1</td></tr><tr><td>DOCUMENT_ROOT</td><td>C:/wamp/www/</td></tr><tr><td>REQUEST_SCHEME</td><td>http</td></tr><tr><td>CONTEXT_PREFIX</td><td></td></tr><tr><td>CONTEXT_DOCUMENT_ROOT</td><td>C:/wamp/www/</td></tr><tr><td>SERVER_ADMIN</td><td>admin@example.com</td></tr><tr><td>SCRIPT_FILENAME</td><td>C:/wamp/www/tidy_dump/test.php</td></tr><tr><td>REMOTE_PORT</td><td>49199</td></tr><tr><td>GATEWAY_INTERFACE</td><td>CGI/1.1</td></tr><tr><td>SERVER_PROTOCOL</td><td>HTTP/1.1</td></tr><tr><td>REQUEST_METHOD</td><td>GET</td></tr><tr><td>QUERY_STRING</td><td></td></tr><tr><td>REQUEST_URI</td><td>/tidy_dump/test.php</td></tr><tr><td>SCRIPT_NAME</td><td>/tidy_dump/test.php</td></tr><tr><td>PHP_SELF</td><td>/tidy_dump/test.php</td></tr><tr><td>REQUEST_TIME_FLOAT</td><td>1468527633.775</td></tr><tr><td>REQUEST_TIME</td><td>1468527633</td></tr></tbody></table><style>
 								table {
 								    border-collapse: collapse;
 								}table, td, th {
@@ -129,4 +129,50 @@
 								}td {
 								    text-align: left;
 								    padding:5px 5px 5px 5px;
-								}.array-multi-th{ background-color: #0000FF; color: white; }.array-single-th{ background-color: #4E9A06; color: white; };</style>
+								}.array-multi-th{ background-color: #0000FF; color: white; }.array-single-th{ background-color: #4E9A06; color: white; }.array-object-th{ background-color: #BFBFBF; color: white; };</style><h3>var_dump and tidy_dump of complex JSON object :</h3><pre>stdClass Object
+(
+    [request_identifier] => 188445503020
+    [resource_data_cache] => Array
+        (
+            [0] => stdClass Object
+                (
+                    [pin_thumbnail_urls] => Array
+                        (
+                            [0] => https://test_url_0_0.hmtl
+                            [1] => https://test_url_0_1.hmtl
+                            [2] => https://test_url_0_2.hmtl
+                            [3] => https://test_url_0_3.hmtl
+                            [4] => https://test_url_0_4.hmtl
+                        )
+
+                )
+
+            [1] => stdClass Object
+                (
+                    [thumbnail_urls] => Array
+                        (
+                            [0] => stdClass Object
+                                (
+                                    [link0] => https://test_url_1_0.hmtl
+                                    [link1] => https://test_url_1_1.hmtl
+                                    [link2] => https://test_url_1_2.hmtl
+                                )
+
+                        )
+
+                )
+
+        )
+
+)
+</pre><table><thead><tr><th colspan='2' class='array-object-th'>OBJECT</th></tr></thead><tbody><tr><th>Key</th><th>Value</th></tr><tr><td>request_identifier</td><td>188445503020</td></tr><tr><td>resource_data_cache</td><td><table><thead><tr><th colspan='2' class='array-multi-th'>ARRAY(2)</th></tr></thead><tbody><tr><th>Key</th><th>Value</th></tr><tr><td>0</td><td><table><thead><tr><th colspan='2' class='array-object-th'>OBJECT</th></tr></thead><tbody><tr><th>Key</th><th>Value</th></tr><tr><td>pin_thumbnail_urls</td><td><table><thead><tr><th colspan='2' class='array-single-th'>ARRAY(5)</th></tr></thead><tbody><tr><th>Key</th><th>Value</th></tr><tr><td>0</td><td>https://test_url_0_0.hmtl</td></tr><tr><td>1</td><td>https://test_url_0_1.hmtl</td></tr><tr><td>2</td><td>https://test_url_0_2.hmtl</td></tr><tr><td>3</td><td>https://test_url_0_3.hmtl</td></tr><tr><td>4</td><td>https://test_url_0_4.hmtl</td></tr></tbody></table></td></tr></tbody></table></td></tr><tr><td>1</td><td><table><thead><tr><th colspan='2' class='array-object-th'>OBJECT</th></tr></thead><tbody><tr><th>Key</th><th>Value</th></tr><tr><td>thumbnail_urls</td><td><table><thead><tr><th colspan='2' class='array-multi-th'>ARRAY(1)</th></tr></thead><tbody><tr><th>Key</th><th>Value</th></tr><tr><td>0</td><td><table><thead><tr><th colspan='2' class='array-object-th'>OBJECT</th></tr></thead><tbody><tr><th>Key</th><th>Value</th></tr><tr><td>link0</td><td>https://test_url_1_0.hmtl</td></tr><tr><td>link1</td><td>https://test_url_1_1.hmtl</td></tr><tr><td>link2</td><td>https://test_url_1_2.hmtl</td></tr></tbody></table></td></tr></tbody></table></td></tr></tbody></table></td></tr></tbody></table></td></tr></tbody></table><style>
+								table {
+								    border-collapse: collapse;
+								}table, td, th {
+								    border: 1px solid black;
+								}th {
+								    text-align: center;
+								}td {
+								    text-align: left;
+								    padding:5px 5px 5px 5px;
+								}.array-multi-th{ background-color: #0000FF; color: white; }.array-single-th{ background-color: #4E9A06; color: white; }.array-object-th{ background-color: #BFBFBF; color: white; };</style>
